fixed issue with spacing on form

--- a/frontend/src/Components/CreateProfile/CreateProfile.module.css
+++ b/frontend/src/Components/CreateProfile/CreateProfile.module.css
@@ -73,6 +73,5 @@
 }
 
 #classOf {
-    padding-bottom: 2px;
-    padding-top: 7px;
+    padding-top: 0px;
 }
